--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,44 +149,29 @@
 }
 
 
+/* thought bubble */
 .thought {
-  display:flex;
-  background-color:#fff;
-  padding:20px;
-  border-radius:30px;
-  min-width:40px;
-  max-width:220px;
-  min-height:40px;
-  margin:20px;
-  position:relative;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
+  @apply flex items-center justify-center text-center relative
+         bg-foreground p-5 rounded-[2rem] min-w-[2.5rem] min-h-[100px] max-w-[14rem] z-10;
 }
+
 .thought:before,
 .thought:after {
-  content:"";
-  background-color:#fff;
-  border-radius:50%;
-  display:block;
-  position:absolute;
-  z-index:-1;
+  content: "";
+  @apply bg-white rounded-full block absolute -z-10;
 }
-.thought:before {
-  width:44px;
-  height:44px;
-  top:-12px;
-  left:28px;
-  box-shadow:-50px 30px 0 -12px #fff;
-}
-.thought:after {
-  bottom:-10px;
-  right:26px;
-  width:30px;
-  height:30px;
-  box-shadow:40px -34px 0 0 #fff,
-             -28px -6px 0 -2px #fff,
-             -24px 17px 0 -6px #fff,
-             -5px 25px 0 -10px #fff;
 
+.thought:before {
+  @apply w-[44px] h-[44px] top-[-12px] left-[28px];
+  box-shadow: -50px 30px 0 -12px #fff;
 }
+
+.thought:after {
+  @apply w-[30px] h-[30px] bottom-[-10px] right-[26px];
+  box-shadow:
+    40px -34px 0 0 #fff,
+    -28px -6px 0 -2px #fff,
+    -24px 17px 0 -6px #fff,
+    -5px 25px 0 -10px #fff;
+}
+
